[gd_scene load_steps=13 format=3 uid="uid://cniinskwd55sr"]

[ext_resource type="Texture2D" uid="uid://mx07iq8msw63" path="res://assets/itens/chest.png" id="1_2mapj"]
[ext_resource type="Script" path="res://scripts/itens/chest_body.gd" id="1_ei3cy"]
[ext_resource type="Script" path="res://scripts/audio/audio_sfx.gd" id="3_ikqjp"]
[ext_resource type="AudioStream" uid="uid://dgpmny7qgm7wy" path="res://assets/sounds/itens/open_chest.ogg" id="3_mtnyj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_b2oa8"]

[sub_resource type="Animation" id="Animation_5cxka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_w4k6h"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gtbiy"]
resource_name = "kill"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c47ax"]
resource_name = "open"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2j1ne"]
_data = {
"RESET": SubResource("Animation_5cxka"),
"idle": SubResource("Animation_w4k6h"),
"kill": SubResource("Animation_gtbiy"),
"open": SubResource("Animation_c47ax")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5wwn"]
size = Vector2(9, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_lbsib"]
radius = 15.0

[node name="ChestBody" type="StaticBody2D" node_paths=PackedStringArray("animation", "audio_sfx") groups=["chest"]]
disable_mode = 1
collision_layer = 32
physics_material_override = SubResource("PhysicsMaterial_b2oa8")
script = ExtResource("1_ei3cy")
animation = NodePath("Animation")
audio_sfx = NodePath("AudioSfx")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_2mapj")
hframes = 4

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_2j1ne")
}

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 8)
shape = SubResource("RectangleShape2D_b5wwn")

[node name="TouchArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionTouchArea" type="CollisionShape2D" parent="TouchArea"]
visible = false
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_lbsib")

[node name="AudioSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mtnyj")
bus = &"Sfx"
script = ExtResource("3_ikqjp")

[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
[connection signal="body_entered" from="TouchArea" to="." method="on_touch_area_entered"]
